--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -6,7 +6,7 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <% if (prods.length> 0) { %>
+                <% if (prods.length > 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
                             <article class="card product-item">
@@ -29,8 +29,9 @@
                                 <div class="card__actions">
                                     <a href="/admin/edit-product" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
-                                        <button type="submit" class="btn">Delete</button>
+                                        <button class="btn" type="submit">Delete</button>
                                     </form>
+
                                 </div>
                             </article>
                             <% } %>
